--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
+@import "http://bootswatch.com/4/superhero/bootstrap.css";
+@import "http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.css";
