--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -32,6 +32,22 @@
           </div>
         </div>
       </div>
+      <br>
+      <div class="row">
+        <div class="col-md-6">
+          <h3>C#</h3>
+        </div>
+        <div class="col-md-6 text-right">
+          <h4>50%</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="progress">
+            <div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="card col-md-6">
@@ -96,6 +112,54 @@
         <div class="col-md-12">
           <div class="progress">
             <div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-md-6">
+          <h3>Italian</h3>
+        </div>
+        <div class="col-md-6 text-right">
+          <h4>40%</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="progress">
+            <div class="progress-bar bg-warning" role="progressbar" style="width: 40%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-md-6">
+          <h3>Russian</h3>
+        </div>
+        <div class="col-md-6 text-right">
+          <h4>20%</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="progress">
+            <div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-md-6">
+          <h3>German</h3>
+        </div>
+        <div class="col-md-6 text-right">
+          <h4>10%</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="progress">
+            <div class="progress-bar bg-warning" role="progressbar" style="width: 10%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div>
       </div>
