Fixed col issue and modified contact page

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
-<form>
-    <fieldset>
+<!--<form>
+  <fieldset>
       <legend>Legend</legend>
       <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
@@ -69,3 +69,11 @@
       <button type="submit" class="btn btn-primary">Submit</button>
     </fieldset>
   </form>
+-->
+<div class="card text-white">
+  <div class="col-md-12">
+    <div class="row">
+      <h4>Contact information:</h4>
+    </div>
+  </div>
+</div>
