--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,169 +1,203 @@
-<div class="row">
-  <div class="card col-md-6">
-    <div class="card-body">
-      <div class="row">
-        <div class="col-md-6">
-          <h3>Python</h3>
-        </div>
-        <div class="col-md-6 text-right">
-          <h4>75%</h4>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="progress">
-            <div class="progress-bar bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+<div class="col-md-12">
+  <div class="row">
+    <div class="card col-md-6">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-md-6">
+            <h3>Python</h3>
+          </div>
+          <div class="col-md-6 text-right">
+            <h4>75%</h4>
           </div>
         </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="col-md-6">
-          <h3>C/C++</h3>
-        </div>
-        <div class="col-md-6 text-right">
-          <h4>60%</h4>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="progress">
-            <div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="progress">
+              <div class="progress-bar bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
           </div>
         </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="col-md-6">
-          <h3>C#</h3>
+        <br>
+        <div class="row">
+          <div class="col-md-6">
+            <h3>C/C++</h3>
+          </div>
+          <div class="col-md-6 text-right">
+            <h4>60%</h4>
+          </div>
         </div>
-        <div class="col-md-6 text-right">
-          <h4>50%</h4>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="progress">
+              <div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="progress">
-            <div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        <br>
+        <div class="row">
+          <div class="col-md-6">
+            <h3>C/C++</h3>
+          </div>
+          <div class="col-md-6 text-right">
+            <h4>60%</h4>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="progress">
+              <div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-md-6">
+            <h3>Java</h3>
+          </div>
+          <div class="col-md-6 text-right">
+            <h4>60%</h4>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="progress">
+              <div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-md-6">
+            <h3>C#</h3>
+          </div>
+          <div class="col-md-6 text-right">
+            <h4>50%</h4>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="progress">
+              <div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="card col-md-6">
-    <div class="card-body">
-      <div class="row">
-        <div class="col-md-6">
-          <h3>Spanish</h3>
-        </div>
-        <div class="col-md-6 text-right">
-          <h4>100%</h4>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="progress">
-            <div class="progress-bar bg-warning" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="card col-md-6">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-md-6">
+            <h3>Spanish</h3>
+          </div>
+          <div class="col-md-6 text-right">
+            <h4>Mother tongue</h4>
           </div>
         </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="col-md-6">
-          <h3>Catalan</h3>
-        </div>
-        <div class="col-md-6 text-right">
-          <h4>100%</h4>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="progress">
-            <div class="progress-bar bg-warning" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="progress">
+              <div class="progress-bar bg-warning" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
           </div>
         </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="col-md-6">
-          <h3>English</h3>
-        </div>
-        <div class="col-md-6 text-right">
-          <h4>80%</h4>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="progress">
-            <div class="progress-bar bg-warning" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        <br>
+        <div class="row">
+          <div class="col-md-6">
+            <h3>Catalan</h3>
+          </div>
+          <div class="col-md-6 text-right">
+            <h4>Mother tongue</h4>
           </div>
         </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="col-md-6">
-          <h3>French</h3>
-        </div>
-        <div class="col-md-6 text-right">
-          <h4>50%</h4>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="progress">
-            <div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="progress">
+              <div class="progress-bar bg-warning" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
           </div>
         </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="col-md-6">
-          <h3>Italian</h3>
-        </div>
-        <div class="col-md-6 text-right">
-          <h4>40%</h4>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="progress">
-            <div class="progress-bar bg-warning" role="progressbar" style="width: 40%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        <br>
+        <div class="row">
+          <div class="col-md-6">
+            <h3>English</h3>
+          </div>
+          <div class="col-md-6 text-right">
+            <h4>80%</h4>
           </div>
         </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="col-md-6">
-          <h3>Russian</h3>
-        </div>
-        <div class="col-md-6 text-right">
-          <h4>20%</h4>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="progress">
-            <div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="progress">
+              <div class="progress-bar bg-warning" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
           </div>
         </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="col-md-6">
-          <h3>German</h3>
-        </div>
-        <div class="col-md-6 text-right">
-          <h4>10%</h4>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="progress">
-            <div class="progress-bar bg-warning" role="progressbar" style="width: 10%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        <br>
+        <div class="row">
+          <div class="col-md-6">
+            <h3>French</h3>
+          </div>
+          <div class="col-md-6 text-right">
+            <h4>50%</h4>
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="progress">
+              <div class="progress-bar bg-warning" role="progressbar" style="width: 50%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-md-6">
+            <h3>Italian</h3>
+          </div>
+          <div class="col-md-6 text-right">
+            <h4>20%</h4>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="progress">
+              <div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-md-6">
+            <h3>Russian</h3>
+          </div>
+          <div class="col-md-6 text-right">
+            <h4>20%</h4>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="progress">
+              <div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-md-6">
+            <h3>German</h3>
+          </div>
+          <div class="col-md-6 text-right">
+            <h4>10%</h4>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="progress">
+              <div class="progress-bar bg-warning" role="progressbar" style="width: 10%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+        <br>
       </div>
-      <br>
     </div>
   </div>
 </div>
